--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "whatsapp-logger",
-  "main": "index.js",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "nodemon ./index.js localhost 8080"
+    "dev": "npx nodemon",
+    "build": "rimraf ./out tsconfig.tsbuildinfo && npx tsc",
+    "start": "npm run build && node ./out/app.js"
   },
   "dependencies": {
+    "@types/node": "^20.3.2",
     "dotenv": "^16.3.1",
-    "log4js": "^6.9.1",
     "moment": "^2.29.4",
     "nodemon": "^2.0.22",
     "puppeteer": "^20.7.3",
-    "selenium-webdriver": "^4.10.0",
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
     "winston": "^3.9.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.1.6"
   }
 }
