handle QR scanning headless

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "npx nodemon",
     "build": "rimraf ./out tsconfig.tsbuildinfo && npx tsc",
     "start": "npm run build && node ./out/app.js",
-    "clean": "rimraf ./out ./data .\\data ./logs ./screenshots"
+    "clean": "rimraf ./out ./userData ./logs ./screenshots"
   },
   "dependencies": {
     "@types/node": "^20.3.2",
